--- a/mobile/partido-resultado.html
+++ b/mobile/partido-resultado.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <title>Artículo</title>
+    <title>Resultado Partido</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -70,64 +70,194 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-12 col-lg-9">
-                <div class="container">
+                <h2 class="text-center azul-prin title-h2-partido-resultados">Roland Garros - Semifinal - 6°</h2>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row"> 
+            <div class="col-12 col-lg-9">
+                <div class="container" id="perfil-jugador">
                     <div class="row">
-                        <div class="col-12">
-                            <div class="img-principal-articulo">
-                                <img src="./img/img-registro.jpg" alt="">
+                        <div class="col-10 offset-1 offset-sm-0 col-sm-12 pl-0 mb-3">
+                            <h2 class="title-h2">Jugadores</h2>
+                        </div>
+                        <div class="col-12 contenedor-perfil-jugador-info">
+                            <div class="row">
+                                <div class="col-12 col-sm-6 col-md-3">
+                                    <div class="img-perfil-jugador d-flex justify-content-center mb-0">
+                                        <img src="./img/img-head-to-head.png" alt="">
+                                    </div>
+                                    <p class="mb-0 azul-prin text-center">Nombre del Jugador</p>
+                                </div>
+                                <div class="col-12 col-sm-6 col-md-3">
+                                    <div class="img-perfil-jugador d-flex justify-content-center mb-0">
+                                        <img src="./img/img-head-to-head.png" alt="">
+                                    </div>
+                                    <p class="mb-0 azul-prin text-center">Nombre del Jugador</p>
+                                </div>
+                                <div class="col-12 col-sm-6 col-md-3">
+                                    <div class="img-perfil-jugador d-flex justify-content-center mb-0">
+                                        <img src="./img/img-head-to-head.png" alt="">
+                                    </div>
+                                    <p class="mb-0 azul-prin text-center">Nombre del Jugador</p>
+                                </div>
+                                <div class="col-12 col-sm-6 col-md-3">
+                                    <div class="img-perfil-jugador d-flex justify-content-center mb-0">
+                                        <img src="./img/img-head-to-head.png" alt="">
+                                    </div>
+                                    <p class="mb-0 azul-prin text-center">Nombre del Jugador</p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-12 contenido-articulo">
-                            <h1>¿Quién es Roger Federer?</h1>
-                            <p>
-                                Roger Federer (Basilea, Suiza; 8 de agosto de 1981) es 
-                                un tenista suizo,​ vencedor de 20 títulos individuales en 
-                                torneos de Grand Slam, el mayor número de toda la historia 
-                                en tenis masculino y ha mantenido el puesto número en el 
-                                ranking de la ATP por un tiempo récord de 310 semanas, 
-                                237 consecutivas. Actualmente ocupa el cuarto lugar en la 
-                                clasificación ATP.
-                            </p>
-                            <p>
-                                Convertido en profesional en 1998, permaneció entre los diez
-                                 mejores tenistas desde 2002 hasta 2016; regresó a este selecto
-                                  grupo después de su victoria en el Abierto de Australia 2017.
-                            </p>
-                            <p>
-                                Roger Federer ha logrado ocho títulos del Campeonato de Wimbledon, 
-                                seis del Abierto de Australia y cinco del Abierto de Estados Unidos,
-                                 así como un título del Torneo de Roland Garros. Es uno de los ocho 
-                                 tenistas que ha logrado vencer en los cuatro torneos del Grand Slam.
-                                  También ostenta el mejor registro en el número de finales de Grand Slam 
-                                  jugadas: 31, diez de estas consecutivas, entre la final de Wimbledon 2005 y 
-                                  el Abierto de Estados Unidos 2007. Así mismo, ha logrado un 
-                                  registro imbatido de seis ATP World Tour Finals, 28 Masters 1000, 
-                                  récord de 24 títulos ATP World Tour 500 y 25 ATP World Tour 250.
-                            </p>
-                            <p>
-                                Su estilo de juego es versátil y apto para todo tipo de superficies,
-                                 y se caracteriza por un excepcional movimiento de pies y variedad 
-                                 de golpes. Efectivo tanto desde el fondo de pista como en la red,
-                                  su aparente falta de esfuerzo durante los partidos, así como sus 
-                                  movimientos eficientes y elegantes, lo han convertido en un tenista 
-                                  muy popular entre sus muchos seguidores. Ha sido galardonado trece 
-                                  veces con el Premio a la Deportividad y ha sido nombrado Jugador
-                                   del Año por la ATP y campeón Mundial por la ITF en cinco ocasiones, 
-                                   mismo número de veces en que se la ha concedido el Premio Laureus 
-                                   al Deportista del Año, cuatro de ellos consecutivos.
-                            </p>
-                        </div>
-                        <div class="col-12 contenedor-compartir-rrss-articulo">
-                            <button class="btn btn-compartir-articulo azul-prin">Compartir</button>
-                            <a href="#"><img src="./img/twitter-azul.png" alt=""></a>
-                            <a href="#"><img src="./img/instagram-azul.png" alt=""></a>
-                            <a href="#"><img src="./img/facebook-azul.png" alt=""></a>
                         </div>
                     </div>
                 </div>
+                <div class="container" id="resultado-del-partido">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3 class="text-center mt-3 mb-3">Resultado del Partido</h3>
+                        </div>                        
+                        <div class="col-10 col-md-8 m-auto">
+                            <div class="row container-resultado-del-partido" style="border-bottom: 1px solid #DCDCDC;">
+                                <div class="col-4 d-flex align-items-center justify-content-center">
+                                    <p class="azul-prin text-center mb-0">Equipo 1</p>
+                                </div>
+                                <div class="col-2 cacilla-resultado-partido">
+                                    <p class="text-center mb-0">4</p>
+                                </div>
+                                <div class="col-2 cacilla-resultado-partido">
+                                    <p class="text-center mb-0">6</p>
+                                </div>
+                                <div class="col-2 cacilla-resultado-partido">
+                                    <p class="text-center mb-0">4</p>
+                                </div>
+                                <div class="col-2 cacilla-resultado-partido">
+                                    <p class="text-center mb-0">4</p>
+                                </div>
+                            </div>
+                            <div class="row container-resultado-del-partido">
+                                <div class="col-4 d-flex align-items-center justify-content-center">
+                                    <p class="azul-prin text-center mb-0">Equipo 1</p>
+                                </div>
+                                <div class="col-2 cacilla-resultado-partido">
+                                    <p class="text-center mb-0">4</p>
+                                </div>
+                                <div class="col-2 cacilla-resultado-partido">
+                                    <p class="text-center mb-0">6</p>
+                                </div>
+                                <div class="col-2 cacilla-resultado-partido">
+                                    <p class="text-center mb-0">4</p>
+                                </div>
+                                <div class="col-2 cacilla-resultado-partido">
+                                    <p class="text-center mb-0">4</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>                    
+                </div>
+                <div class="container" id="perfil-jugador" class="titulos-finales">
+                    <div class="row">
+                        <div class="col-10 offset-1 offset-sm-0 col-sm-12 pl-0 mb-3">
+                            <h2 class="title-h2">Perfil de los jugadores</h2>
+                        </div>
+                        <div class="col-12 contenedor-perfil-jugador-info">
+                            
+                            <div class="table-responsive">
+                                <table class="table table-hover table-partido-resultado">
+                                    <thead>
+                                      <tr>
+                                        <th scope="col">Jugador</th>
+                                        <th scope="col">Edad</th>
+                                        <th scope="col">Lugar Nacimiento</th>
+                                        <th scope="col">Residencia</th>
+                                        <th scope="col">Peso</th>
+                                        <th scope="col">Juego</th>
+                                        <th scope="col">Reves</th>
+                                        <th scope="col">Títulos</th>
+                                      </tr>
+                                    </thead>
+                                    <tbody>
+                                      <tr>
+                                        <td class="td-partido-resultado">
+                                            <div class="img-jugador-partido-resultado">
+                                                <img src="./img/img-user-widget-ranking.jpg" alt="">
+                                            </div>
+                                            <p class="azul-prin mb-0">Rafael Nadal</p>
+                                        </td>
+                                        <td>37 años</td>
+                                        <td>Cali, Colombia</td>
+                                        <td>Cali, Colombia</td>
+                                        <td>89 kilos</td>
+                                        <td>Diestro</td>
+                                        <td>Dos manos</td>
+                                        <td>1</td>
+                                      </tr>
+                                      <tr>
+                                        <td class="td-partido-resultado">
+                                            <div class="img-jugador-partido-resultado">
+                                                <img src="./img/img-user-widget-ranking.jpg" alt="">
+                                            </div>
+                                            <p class="azul-prin mb-0">Rafael Nadal</p>
+                                        </td>
+                                        <td>37 años</td>
+                                        <td>Cali, Colombia</td>
+                                        <td>Cali, Colombia</td>
+                                        <td>89 kilos</td>
+                                        <td>Diestro</td>
+                                        <td>Dos manos</td>
+                                        <td>1</td>
+                                      </tr>
+                                      <tr>
+                                        <td class="td-partido-resultado">
+                                            <div class="img-jugador-partido-resultado">
+                                                <img src="./img/img-user-widget-ranking.jpg" alt="">
+                                            </div>
+                                            <p class="azul-prin mb-0">Rafael Nadal</p>
+                                        </td>
+                                        <td>37 años</td>
+                                        <td>Cali, Colombia</td>
+                                        <td>Cali, Colombia</td>
+                                        <td>89 kilos</td>
+                                        <td>Diestro</td>
+                                        <td>Dos manos</td>
+                                        <td>1</td>
+                                      </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="container" id="perfil-jugador" class="biografia">
+                    <div class="row">
+                        <div class="col-10 offset-1 offset-sm-0 col-sm-12 pl-0 mb-3">
+                            <h2 class="title-h2">Resumen</h2>
+                        </div>
+                        <div class="col-12 contenedor-perfil-jugador-info">
+                            <p
+                            >Novak Djokovic nació el 22 de mayo de 1987 en Belgrado, Serbia.
+                            </p>
+                            <p>
+                                Su padre, Srdjan, y su madre, Dijana, son propietarios de una pizzería. 
+                                Su padre, tío y primo fueron esquiadores profesionales. Tiene dos 
+                                hermanos menores, Marko y Djordje, que también son jugadores de tenis.
+                            </p>
+                            <p>
+                                Se inicia en el tenis a los cuatro años y debuta profesionalmente con 
+                                dieciséis. A los doce años asiste a la Academia de Niki Pilic en Munich. 
+                                Su ídolo por aquel entonces era Pete Sampras. Su superficie favorita son 
+                                las canchas duras, aunque se considera un jugador de todo tipo de pistas.
+                            </p>
+                            <div class="boton">
+                                <button class="btn boton-biografia-perfil-jugador">Ver más</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>                
                 <div class="container" id="perfil-jugador" class="comentarios">
                     <div class="row">
                         <div class="col-10 offset-1 offset-sm-0 col-sm-12 pl-0 mb-3">
@@ -175,7 +305,52 @@
                             </div>
                         </div>
                     </div>
-                </div>             
+                </div>
+                <div class="container" id="fotos-recientes">
+                    <div class="row">
+                        <div class="col-10 offset-1 offset-sm-0 col-sm-12 pl-0 mb-3">
+                            <h2 class="title-h2">Fotos Recientes</h2>
+                        </div>
+                        <div class="col-10 offset-1 offset-sm-0 col-sm-12">
+                            <div class="row">
+                                <div class="col-8 pl-0">
+                                    <div class="img-principal-fotos-recientes">
+                                        <a href="#">
+                                            <img src="./img/fotos-recientes.jpg" alt="">
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="col-4 pr-0">
+                                    <div class="row">
+                                        <div class="contenedor-fotos-secundarias">
+                                            <div class="col-12 pr-0 pl-0 mb-2">
+                                                <a href="#">
+                                                    <div class="img-secundario-fotos-recientes">
+                                                        <img src="./img/fotos-recientes-2.jpg" alt="">
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <div class="col-12 pr-0 pl-0 mb-2">
+                                                <a href="#">
+                                                    <div class="img-secundario-fotos-recientes">
+                                                        <img src="./img/fotos-recientes-3.jpg" alt="">
+                                                    </div>
+                                                </a>
+                                            </div>
+                                            <div class="col-12 pr-0 pl-0">
+                                                <a href="#">
+                                                    <div class="img-secundario-fotos-recientes">
+                                                        <img src="./img/fotos-recientes-4.jpg" alt="">
+                                                    </div>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>                
                 <div class="container" id="ultimas-noticias">
                     <div class="row">
                         <div class="col-10 offset-1 offset-sm-0 col-sm-12 pl-0">
